@@ -3,6 +3,6 @@ DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer-uau-1.0_rc4_p20100822.tar.lzma 7289729 RMD160 ef78f9eb6a5a6ea44d5e5556c86917b2f971366a SHA1 99eed8a75d5472b7a4e6a644fab86bdf402b3a3c SHA256 6e8e852aa619cdbb7925a0406a8446ec484abb42329cebe643975804e0b0742c
 EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b816e2ab418f89ea32a SHA1 d7d057ca95276e370de18e61767033922dc559f8 SHA256 a884674e4da716f691ca1443de2e8bdcb0d4a76a7898dfe395095a4ed2c6563f
-EBUILD mplayer-uau-9999.ebuild 23509 RMD160 4e2ab54c7bfff0871bd7aea553d632725c1d9500 SHA1 0e1bbe8a274b81b82aaf8f10d835d912ad43d753 SHA256 0aa3f80c2272ca643c48ddddd960a9a7e773cc7abd39eb0533c647afb4f22b85
-MISC ChangeLog 887 RMD160 d23ea9e8157c04fa48988d70e6e2d35fdcab7dd3 SHA1 9c587e034adb01061da84d2c42d251689bb385fd SHA256 6825f37e5b907e851074651165f37a1712250914163abbaa1eae25a658433b52
-MISC metadata.xml 4257 RMD160 65763489f8942ab76c3bef1f9a8b9d15e7f3cf9a SHA1 a9f74be76416fb7e67fe426fb607a9131f49d873 SHA256 37b8974580e603dc3881f2213cfbeffc184b1d27aa7660888c943b42ec1e6b03
+EBUILD mplayer-uau-9999.ebuild 23548 RMD160 0dec288586026776185572f1235a20c639aa598a SHA1 da9a887af1f9526311aaebad7122a38f8b5ec219 SHA256 80802a348773f9e5456f6c15044e5226f0ec55b4f68ad74857af39d3ddef124c
+MISC ChangeLog 1013 RMD160 56932ed8715cb00002f66fef39710fd1325745bb SHA1 c03a7a17a2af39fb5734c9f157b0dd1eb1d935d6 SHA256 b83421aa9c78337650bdbe1a0854e272974dafa8b4c9d78ea7cb5769c66a1517
+MISC metadata.xml 4739 RMD160 e2f1220571f2fb983fa04408190449b75a346b6b SHA1 eaf3e0b5ff1b9759b6d4e7233b2f57f42e360bb6 SHA256 5c818b4e3898a2d0d5a8b833f3bab6c15bdd121a10b55c6e1a6e9f34f7e514a4
