@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+<herd>no-herd</herd>
 <maintainer>
 	<email>nikoli@lavabit.com</email>
 	<name>Nikoli</name>
@@ -22,8 +23,9 @@
 <use>
 	<flag name="3dnowext">Enable 3dnowext cpu instructions</flag>
 	<flag name="amr">Enables Adaptive Multi-Rate format support</flag>
-	<flag name="ass">Internal SRT/SSA/ASS (SubRip / SubStation Alpha) subtitle support</flag>
+	<flag name="ass">SRT/SSA/ASS (SubRip / SubStation Alpha) subtitle support</flag>
 	<flag name="bl">Blinkenlights video output</flag>
+	<flag name="bluray">Enable playback of Blu-ray filesystems</flag>
 	<flag name="bs2b">Enable Bauer stereophonic-to-binaural headphone filter</flag>
 	<flag name="cdio">Use libcdio for CD support (instead of cdparanoia)</flag>
 	<flag name="cpudetection">Enables runtime CPU detection (useful for bindist, compatibility on other CPUs)</flag>
@@ -37,10 +39,12 @@
 	<flag name="faad">Use external faad library for AAC decoding</flag>
 	<flag name="ffmpeg-mt">Enable multithreaded ffmpeg</flag>
 	<flag name="hardcoded-tables">Use pre-calculated tables rather than calculating them on the fly.</flag>
+	<flag name="libmpeg2">Build support for mpeg2 over internal libmpeg2 rather than using ffmpeg.</flag>
 	<flag name="live">Enables live.com streaming media support</flag>
 	<flag name="md5sum">Enables md5sum video output</flag>
 	<flag name="mmxext">Enables mmx2 support</flag>
 	<flag name="mng">MNG input support</flag>
+	<flag name="mpg123">Enable support for mp3 decoding over media-sound/mpg123.</flag>
 	<flag name="network">Enables network streaming support</flag>
 	<flag name="nut">Enables support for the NUT container format</flag>
 	<flag name="osdmenu">Enables support for on-screen display (OSD) menus</flag>
@@ -50,6 +54,7 @@
 	<flag name="rar">Enable Unique RAR File Library</flag>
 	<flag name="real">Adds real audo/video support</flag>
 	<flag name="rtc">Enables usage of the linux real time clock. The alternative is software emulation of rtc</flag>
+	<flag name="rtmp">Enables RTMPDump Streaming Media support</flag>
 	<flag name="schroedinger">Enable Dirac video support (an advanced royalty-free video compression format) via libschroedinger (high-speed implementation in C of the Dirac codec).</flag>
 	<flag name="shm">Enable support for shm</flag>
 	<flag name="ssse3">faster floating point optimization for SSSE3 capable chips (Intel Core 2 and later chips)</flag>
@@ -59,7 +64,7 @@
 	<flag name="twolame">Enable twolame MPEG-2 encoding</flag>
 	<flag name="vdpau">Enables experimental VDPAU support (requires nVidia video cards) to offload MPEG2/MPEG4/VC1/WMV CPU processing to video card</flag>
 	<flag name="vidix">Support for vidix video output</flag>
-	<flag name="vpx">Support for VP8 video compression codec</flag>
+	<flag name="vpx">Enables vp8 codec support using libvpx: Decoding vp8 does not require this to be enabled but libvpx can also be used for decoding; encoding vp8 requires this useflag to be enabled though.</flag>
 	<flag name="xanim">Enables support for xanim based codecs</flag>
 	<flag name="xvmc">Enables X-Video Motion Compensation support</flag>
 	<flag name="zoran">Enables ZR360[56]7/ZR36060 video output</flag>
