@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Nov 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild,
+  metadata.xml:
+  update, sync with mplayer from portage
+
 *mplayer-uau-1.0_rc4_p20100822 (26 Aug 2010)
 
   26 Aug 2010; Nikoli <nikoli@lavabit.com>
